k8s-dev.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: dev-alinesno-student-demo
  labels:
    app: dev-alinesno-student-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dev-alinesno-student-demo
  template:
    metadata:
      labels:
        app: dev-alinesno-student-demo
    spec:
      containers:
      - name: dev-alinesno-student-demo
        image: registry-vpc.cn-shenzhen.aliyuncs.com/alinesno-cloud/alinesno-student-demo:1.0.0-SNAPSHOT
        resources:
          limits:
            cpu: 710m
            memory: 2048Mi
          requests:
            cpu: 200m
            memory: 1024Mi
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 45
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: dev-alinesno-student-demo
  namespace: default
  labels:
    app: dev-alinesno-student-demo
spec:
  ports:
    - name: tcp-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: dev-alinesno-student-demo
  type: ClusterIP
 
# 如需nodePort，则自行配置  
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: dev-alinesno-student-demo
#   namespace: default
#   labels:
#     app: dev-alinesno-student-demo
# spec:
#   ports:
#     - name: tcp-8080
#       protocol: TCP
#       port: 8080
#       targetPort: 8080
#       nodePort: 8080
#   selector:
#     app: dev-alinesno-student-demo
