k8s-dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-alinesnostudentdemo-dev-learn-linesno-com
spec:
  rules:
  - host: alinesnostudentdemo.dev.learn.linesno.com
    http:
      paths:
      - path: /
        backend:
          serviceName: dev-alinesno-student-demo
          servicePort: 8080
